deployments/overlays/staging/configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  ENVIRONMENT: staging
