deployments/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        - staging-deployment.mycloud
      secretName: wildcard-secret
  rules:
    - host: staging-deployment.mycloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-external-service
                port:
                  number: 80
